--- a/app/views/shop/index.html.erb
+++ b/app/views/shop/index.html.erb
@@ -1,3 +1,3 @@
 <h1>Brainspace</h1>
 
-<p><%= link_to 'Sign up', new_shop_path %> your shop today</p>
+<p><%= link_to 'Sign up', new_shop_path, id: 'sign_up_shop' %> your shop today</p>
