Restructures routes to better reflect REST standards
- Leverages  to accomplish this

--- a/app/views/shop/_new_shop.html.erb
+++ b/app/views/shop/_new_shop.html.erb
@@ -6,7 +6,7 @@
   </ul>
 <% end %>
 
-<%= form_for shop, url: create_shop_path do |s| %>
+<%= form_for shop, url: '/shop' do |s| %>
   <table>
     <tr>
       <td id="name">Shop Name</td>
