Ensures Merchant is logged in prior to invoking any Shop actions
[#158101242]

--- a/app/views/merchant/_new_merchant.html.erb
+++ b/app/views/merchant/_new_merchant.html.erb
@@ -17,7 +17,7 @@
         <td><%= f.password_field :password, maxlength: 256, size: 25 %></td>
       </tr>
       <tr>
-        <td id="password-confirmation">Password Confirmation</td>
+        <td id="password-confirmation">Confirm Password</td>
         <td><%= f.password_field :password_confirmation, maxlength: 256, size: 25 %></td>
       </tr>
       <tr>
