Adds name column to Merchant
NOTE: Will require redo-ing all migrations.  This is
fine since the application has not yet been deployed
anywhere.

Also:
- Displays merchant name on dashboard
- Merchant must specify name on sign up

[#158101242]

--- a/app/views/merchant/show.html.erb
+++ b/app/views/merchant/show.html.erb
@@ -1,4 +1,4 @@
-<h1>Your Brainspace Dashboard</h1>
+<h1><%= current_merchant.name %> Dashboard</h1>
 
 <ul>
   <% current_merchant.shops.each do |shop| %>
