--- a/app/views/merchant/_new_merchant.html.erb
+++ b/app/views/merchant/_new_merchant.html.erb
@@ -9,6 +9,10 @@
 <%= form_for merchant, url: register_merchant_path do |f| %>
   <table>
     <tr>
+      <td id="name">Name</td>
+      <td><%= f.text_field :name, maxlength: 256, size: 25 %></td>
+    </tr>
+    <tr>
       <td id="email">Email</td>
       <td><%= f.text_field :email, maxlength: 256, size: 25 %></td>
     </tr>
