--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,9 +12,9 @@
     <% if current_merchant %>
         Signed in as <%= current_merchant.email %> | <%= link_to 'Dashboard', "#{site_root_url}" %>
         <br>
-        <%= link_to 'Logout', "#{site_root_url}/merchant/logout" %>
+        <%= link_to 'Logout', "#{site_root_url}/merchant/logout", id: 'logout' %>
     <% else %>
-        <%= link_to 'Login', "#{site_root_url}/merchant/login" %> | <%= link_to 'Signup', "#{site_root_url}/merchant/signup" %>
+        <%= link_to 'Login', "#{site_root_url}/merchant/login", id: 'login' %> | <%= link_to 'Signup', "#{site_root_url}/merchant/signup", id: 'signup' %>
     <% end %>
 
     <%= yield %>
