--- a/app/views/merchant/_new_merchant.html.erb
+++ b/app/views/merchant/_new_merchant.html.erb
@@ -1,5 +1,5 @@
 <% if @merchant.errors.any? %>
-  <ul>
+  <ul class="errors">
     <% @merchant.errors.full_messages.each do |message| %>
       <li><%= message %></li>
     <% end %>
