--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,11 +10,11 @@
 
   <body>
     <% if current_merchant %>
-        Signed in as <%= current_merchant.email %> | <%= link_to 'Dashboard', "#{merchant_root_url}" %>
+        Signed in as <%= current_merchant.email %> | <%= link_to 'Dashboard', "#{home_url}" %>
         <br>
-        <%= link_to 'Logout', merchant_logout_url, id: 'logout' %>
+        <%= link_to 'Logout', "#{home_url}/merchant/logout", id: 'logout' %>
     <% else %>
-        <%= link_to 'Login', login_merchant_url, id: 'login' %> | <%= link_to 'Signup', signup_merchant_url, id: 'signup' %>
+        <%= link_to 'Login', "#{home_url}/merchant/login", id: 'login' %> | <%= link_to 'Signup', "#{home_url}/merchant/signup", id: 'signup' %>
     <% end %>
 
     <%= yield %>
