--- a/app/views/shops/_new_shop.html.erb
+++ b/app/views/shops/_new_shop.html.erb
@@ -6,7 +6,7 @@
   </ul>
 <% end %>
 
-<%= form_for shop, url: '/shop' do |s| %>
+<%= form_for shop, url: '/shops' do |s| %>
   <table>
     <tr>
       <td id="name">Shop Name</td>
