Ensure session is loaded before accessing it
Rename /merchants/show -> /merchants/dashboard
Rename /merchants/show.html.erb -> /merchants/dashboard.html.erb
Make routes work for localhost (in addition to lvh.me), by adding .try around subdomain detection regexes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
   </head>
 
   <body>
-    <% if current_merchant %>
+    <% if current_merchant.present? %>
         Signed in as <%= current_merchant.email %> | <%= link_to 'Dashboard', "#{home_url}" %>
         <br>
         <%= link_to 'Logout', "#{home_url}/merchants/logout", id: 'logout' %>
